<resources>
    <string name="app_name">discord</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login">登 录</string>
    <string name="check_password">记住密码</string>
    <string name="password">验证码</string>
    <string name="account">手机号</string>
    <string name="loading">加载中</string>
    <string name="default_code">666666</string>
    <string name="c2c_test">单聊测试</string>
    <string name="c2g_test">群聊测试</string>
    <string name="peer_id">对方ID</string>
    <string name="btn_send">发送</string>
    <string name="btn_query_history">查询历史记录</string>
</resources>