<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    tools:context=".login.LoginActivity">

    <!-- 图标logo -->
    <ImageView
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_100"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_20"
        android:src="@mipmap/logo"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height_normal"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginRight="@dimen/margin_large">

        <ImageView
            android:id="@+id/img_account"
            android:layout_width="@dimen/dp_19"
            android:layout_height="@dimen/dp_20"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/margin_tiny"
            android:layout_marginBottom="@dimen/margin_tiny"
            android:scaleType="fitXY"
            android:src="@mipmap/icon_login_account" />

        <EditText
            android:id="@+id/et_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginBottom="@dimen/margin_tiny"
            android:layout_toEndOf="@+id/img_account"
            android:background="@null"
            android:hint="@string/account"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_toEndOf="@+id/img_account"
            android:background="@color/orange_light"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height_normal"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large">

        <ImageView
            android:id="@+id/img_pw"
            android:layout_width="@dimen/dp_18"
            android:layout_height="@dimen/dp_20"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/margin_tiny"
            android:layout_marginBottom="@dimen/margin_tiny"
            android:scaleType="fitXY"
            android:src="@mipmap/icon_login_pw" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginBottom="@dimen/margin_tiny"
            android:layout_toEndOf="@+id/img_pw"
            android:background="@null"
            android:hint="@string/password"
            android:text="@string/default_code"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_normal" />

        <ImageView
            android:id="@+id/iv_see_password"
            android:layout_width="@dimen/image_height_litter"
            android:layout_height="@dimen/image_height_litter"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:scaleType="fitXY"
            android:src="@drawable/image_password_bg" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_toEndOf="@+id/img_pw"
            android:background="@color/orange_light"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginRight="@dimen/margin_large"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="@dimen/margin_small"
        android:paddingBottom="@dimen/margin_small">

        <CheckBox
            android:id="@+id/checkBox_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:checked="false"
            android:padding="@dimen/dp_10"
            android:text="@string/check_password"
            android:textSize="@dimen/text_size_normal" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_huge"
        android:layout_marginRight="@dimen/margin_large"
        android:paddingTop="@dimen/margin_small"
        android:paddingBottom="@dimen/margin_small"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_normal" />

</LinearLayout>